# NSRA1

./: .gitignore  LICENSE  ODrive_setup.sh  README.md  local_run.sh  robot_vision_build.sh
.github/workflows/: actions-runner.yml
PIO/NSRA_control/: platformio.ini
PIO/NSRA_control/src/: controller.cpp
arduino/CANMaster/: CANMaster.ino  Gripper.ino  Gripper_WLAN.ino
robot_ws/src/nsra_controller/: CMakeLists.txt  package.xml
robot_ws/src/nsra_controller/cmake/: FindGflags.cmake
robot_ws/src/nsra_controller/include/nsra_controller/: generic_hw_control_loop.h  generic_hw_interface.h  sim_hw_interface.h
robot_ws/src/nsra_controller/include/nsra_controller/tools/: controller_to_csv.h  csv_to_controller.h  joystick_manual_control.h
robot_ws/src/nsra_controller/nsra_control/: CMakeLists.txt  package.xml
robot_ws/src/nsra_controller/nsra_control/config/: nsra_controllers.yaml
robot_ws/src/nsra_controller/nsra_control/include/nsra_control/: nsra_hw_interface.h
robot_ws/src/nsra_controller/nsra_control/launch/: nsra_hardware.launch
robot_ws/src/nsra_controller/nsra_control/src/: nsra_hw_interface.cpp  nsra_hw_main.cpp
robot_ws/src/nsra_controller/src/: generic_hw_control_loop.cpp  generic_hw_interface.cpp  sim_hw_interface.cpp  sim_hw_main.cpp
robot_ws/src/nsra_controller/src/tools/: controller_to_csv.cpp  controller_to_csv_main.cpp  csv_to_controller.cpp  csv_to_controller_main.cpp  test_trajectory.cpp
robot_ws/src/nsra_controller/srv/: driver.srv  feedback.srv
robot_ws/src/nsra_gxipy/: CMakeLists.txt  package.xml  setup.py
robot_ws/src/nsra_gxipy/src/nsra_gxipy/: __init__.py  gxiapi.py
robot_ws/src/nsra_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robot_ws/src/nsra_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  nsra.srdf  ompl_planning.yaml  ros_controllers.yaml
robot_ws/src/nsra_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  nsra_moveit.launch  nsra_moveit_controller_manager.launch.xml  nsra_planning_execution.launch  nsra_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
robot_ws/src/nsra_moveit_config_new/: .setup_assistant  CMakeLists.txt  package.xml
robot_ws/src/nsra_moveit_config_new/config/: fake_controllers.yaml
robot_ws/src/nsra_moveit_config_new/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  nsra_moveit.launch  nsra_moveit_controller_manager.launch.xml  nsra_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
robot_ws/src/nsra_moveit_interface/: CMakeLists.txt  package.xml
robot_ws/src/nsra_moveit_interface/src/: nsra_moveit_interface  pick_place.cpp
robot_ws/src/nsra_odrive_interface/: CMakeLists.txt  package.xml
robot_ws/src/nsra_odrive_interface/launch/: odrive_interface.launch
robot_ws/src/nsra_odrive_interface/msg/: nsra_control_step.msg  obj_det.msg
robot_ws/src/nsra_odrive_interface/src/: data_collection  nsra_odrive_interface  odrive0  odrive2  test_driver_node
robot_ws/src/nsra_odrive_interface/srv/: bd_coords.srv  driver.srv  feedback.srv  lr_coords.srv  requested_pos.srv  requested_state.srv  velocity.srv
robot_ws/src/nsra_pyndi/: CMakeLists.txt  package.xml  setup.py
robot_ws/src/nsra_pyndi/src/nsra_pyndi/: __init__.py  finder.py  lib.py  receiver.py
robot_ws/src/nsra_robot_vision/: CMakeLists.txt  package.xml
robot_ws/src/nsra_robot_vision/config/: cam_stereo.yml  left_conf.xml  left_data.xml  right_conf.xml  right_data.xml
robot_ws/src/nsra_robot_vision/include/: nsra_bottle_detection.h
robot_ws/src/nsra_robot_vision/launch/: launch.txt
robot_ws/src/nsra_robot_vision/src/: nsra_bottle_detection.cpp  nsra_gripper
robot_ws/src/nsra_robot_vision/src/bottle_detection_v1/: nsra_bd_front_view  nsra_bd_object_detection  nsra_bd_top_view
robot_ws/src/nsra_robot_vision/src/bottle_detection_v2/: nsra_color_configuration  nsra_stereo_bottle_detection
robot_ws/src/nsra_robot_vision/src/camera_callibration/: calib_ingest  calib_stereo.cpp
robot_ws/src/nsra_robot_vision/src/corner_detection/: cbc_detection_left  cbc_detection_right
robot_ws/src/nsra_robot_vision/src/deprecated/: NDI_source_viewer  plot_3d_points  read_images.cpp  single_cam_callibration.cpp  stereo_callibration  stereo_callibration.cpp
robot_ws/src/nsra_robot_vision/src/deprecated/blob_detection/: blob_detection_left  blob_detection_right
robot_ws/src/nsra_robot_vision/src/deprecated/calibration/: calib_intrinsics  undistort_rectify.cpp
robot_ws/src/nsra_robot_vision/src/tests/: stereo_camera  stereo_depth_map
robot_ws/src/nsra_robot_vision/srv/: coords.srv  stereo_camera_coords.srv
robot_ws/src/nsra_support/: CMakeLists.txt  package.xml
robot_ws/src/nsra_support/urdf/: robot.xacro
robot_ws/src/nsra_support/urdf/mm_stl/: Component4_1.stl  Component5_1.stl  Component6_1.stl
robot_ws/src/nsra_urdf/: CMakeLists.txt  package.xml
robot_ws/src/nsra_urdf/launch/: urdf.launch
robot_ws/src/nsra_urdf/urdf/: robot.xacro
