<?xml version="1.0"?>
<package>
  <name>nsra_control</name>
  <version>0.0.1</version>
  <description>nsra_control</description>

  <maintainer email="noa.sendlhofer@gmail.com">Someone</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/ros_control_boilerplate</url>
  <url type="butracker">https://github.com/davetcoleman/ros_control_boilerplate/issues</url>
  <url type="repository">https://github.com/davetcoleman/ros_control_boilerplate/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nsra_controller</build_depend>
  <build_depend>serial</build_depend>
  
  <run_depend>nsra_controller</run_depend>
  <exec_depend>serial</exec_depend>
  

  <export>
  </export>
</package>
